replace enviroment -> equipment
