# Backend/Database/internal/entity/equipment.go
@@ -1,0 +1,18 @@
+package entity
+
+import "github.com/gofrs/uuid"
+
+type Equipment struct {
+	Id              uuid.UUID `json:"id"`
+	Name            string    `json:"name"`
+	Description     string    `json:"description"`
+	PhotoURL        string    `json:"photo_url"`
+	TypeOfEquipment string    `json:"type"`
+	Auditory        string    `json:"auditory"`
+	IsActive        bool      `json:"is_active"`
+}
+
+type TypeOfEquipment struct {
+	Id   uuid.UUID
+	Name string
+}
